# fusiongan

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: appendix.md  index.md  myst.yml  references.bib  simulations.md
docs/app/: index.html
experiments/: __init__.py  method_comparison.py  scf_benchmark.py
src/fusiongan/: __init__.py  data_source.py  discriminator.py  figures.py  generator.py  metrics.py  paper_results.py  synthesizer.py
tests/: test_data_source.py  test_discriminator.py  test_generator.py  test_metrics.py  test_synthesizer.py
